--- a/css/popup.css
+++ b/css/popup.css
@@ -7,10 +7,15 @@ a {
   padding: 0;
 }
 
+h1 {
+  /* center horizontally */
+  text-align: center;
+}
+
 /* Set body font and background color */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f1f1f1;
+  background-color: black;
   padding: 10px;
 }
 
@@ -19,20 +24,22 @@ h1 {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
+  color: #7DF9FF;
 }
 
 /* Style buttons */
 button {
   margin-bottom: 10px;
   padding: 8px 12px;
-  background-color: #4CAF50;
-  color: white;
+  background-color: #000080;
+  color: #7DF9FF;
   border: none;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #0000af;
 }
 
 /* Style extension list */
